# move

./: Cargo.toml  README.md
bytecode-prover-notes/: (wip) converter.md  <ModuleBuilder>.translate().md  A potential solution with target injection.md  An issue with run_spec_checker().md  Compilation stages.md  Do we need all of the involved modules?.md  ModelBuilder add().md  ModuleBuilder targets.md  ModuleBuilder update_spec().md  Pertaining to a vector of types in Type.md  Prover Spec Flow.canvas  Rederivation.md  SpecBlock construction.md  The expanded module.md  Thoughts on execution permutations.md  Type_.md  What about function info?.md  Why do all this work of building a prover object model from bytecode?.md  address - expansion vs compiled.md  big picture of converting types.md  creating what we need from CompiledModule.md  derive fun type formals.md  deriving type parameters.md  deserializing constants.md  expansion to named type.md  expansion type from file format type signature.md  expansion.md  hlir-cfgir to bytecode.md  module_builder.md  named to hlir type.md  naming to typing.md  oh shit stackless bytecode.md  our own run_spec_checker()?.md  parser ModuleMember.md  parser.md  run_spec_checker().md  the character arc of type parameters.md  (+2 more)
language/move-bytecode-prover/: Cargo.toml  README.md
language/move-bytecode-prover/sample-bytecode/: amm.mv  clob_market.mv  downloaded_clob_market.mv
language/move-bytecode-prover/src/: bytecode_model_builder_with_specs.rs  converter.rs  expansion_from_source_map.rs  lib.rs  notes.rs  values_impl.rs
(+3 files in other folders)
